<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_vertical"
    tools:context=".ui.activity.MainActivity">

    <ImageView
        android:id="@+id/iv_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/menu1"
        app:layout_constraintBottom_toTopOf="@+id/iv_webview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_button_background" />

    <ImageView
        android:id="@+id/iv_webview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_game"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_button_background" />

    <TextView
        android:id="@+id/tv_menu1"
        style="@style/MainMenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/monkey_treasure"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/iv_game"
        app:layout_constraintEnd_toEndOf="@+id/iv_game"
        app:layout_constraintStart_toStartOf="@+id/iv_game"
        app:layout_constraintTop_toTopOf="@+id/iv_game" />

    <TextView
        android:id="@+id/tv_menu2"
        style="@style/MainMenuFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/webview"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/iv_webview"
        app:layout_constraintEnd_toEndOf="@+id/iv_webview"
        app:layout_constraintStart_toStartOf="@+id/iv_webview"
        app:layout_constraintTop_toTopOf="@+id/iv_webview" />
</androidx.constraintlayout.widget.ConstraintLayout>